fixing store page overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,7 @@ html {
 }
 body {
 	background-color: black;
+	overflow-x: hidden;
 }
 
 /* Utility: Reset button to appear as text */
